Add in functionality to display the three most recent front page posts

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -6,11 +6,17 @@
 
     %p Find activities, games, and worksheets to use in your English classes. Share your ideas and help your fellow teachers make their classes awesome!
 
-    .card
-      %h5.card-header= @top_post.title
+    .card.main-post
+      %h5.card-header= @top_posts.first.title
       .card-body
-        %p= markdown_for_posts(@top_post.excerpt)
-        %span.float-right= link_to "Read more", posts_path(@top_post)
+        %p= markdown_for_posts(@top_posts.first.excerpt)
+        %span.float-right= link_to "Read more", posts_path(@top_posts.first)
+    - if @top_posts.second
+      .card.secondary-post
+        %h5.card-header= link_to @top_posts.second.title, posts_path(@top_posts.second)
+    - if @top_posts.third
+      .card.secondary-post
+        %h5.card-header= link_to @top_posts.third.title, posts_path(@top_posts.third)
 
   .nagajob.col-sm-12.col-md-4.pt-2
     = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
