--- a/app/views/activities/modqueue.html.haml
+++ b/app/views/activities/modqueue.html.haml
@@ -30,6 +30,23 @@
         %td= link_to "#{activity.user.username} (#{activity.user.activity_count})", activity.user
         %td= activity.short_description
 
+%h4 Unapproved comments
+
+%table.table.table-striped.table-sm
+  %thead
+    %tr
+      %th{"scope" => "col"} User
+      %th{"scope" => "col"} Source
+      %th{"scope" => "col"} Comment
+  %tbody
+    - @comments.each do |comment|
+      %tr
+        %td= link_to comment.user.username, comment.user
+        %td= link_to "Source", comment.commentable
+        %td= comment.content
+        %td= link_to "Approve", approve_comment_path(comment), method: :put
+        %td= link_to "Delete", comment, method: :delete, data: { confirm: "Delete this comment?" }
+
 
 %h4 Other useful administration links:
 %ul
