--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -34,7 +34,7 @@
     = link_to t('layouts.es'), es_path, class: "nav-link active"
     = link_to t('layouts.jhs'), jhs_path, class: "nav-link active"
     = link_to t('layouts.hs'), hs_path, class: "nav-link active"
-    = link_to "Warm-ups", warmups_path, class: "nav-link active"
+    = link_to t('layouts.warm-ups'), warmups_path, class: "nav-link active"
     = link_to t('layouts.grammar'), grammar_path, class: "nav-link active"
     = link_to t('layouts.textbook_listing'), textbooks_path, class: "nav-link active"
     
