Add a thanks page

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -4,7 +4,8 @@
       %h5.text-light ALTopedia
       %ul.list-unstyled.text-small
         %li= link_to t('layouts.about'), about_path, class: "text-light"
-        %li= link_to "Contact", contact_path, class: "disabled text-light"
+        %li= link_to "Contact", contact_path, class: "text-light"
+        %li= link_to "Acknowledgements", thanks_path, class: "text-light"
     .col-md-4
       %h5.text-light Elsewhere
       %ul.list-unstyled.text-small
