--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -21,3 +21,8 @@
   %li= link_to "Akita JET teaching resources", "http://akitajet.com/wiki/Teaching_resources"
   %li= link_to "ALT Wiki", "https://www.altwiki.net"
   %li= link_to "Breaking News English", "https://breakingnewsenglish.com"
+
+%h5 Living and teaching in Japan
+%ul
+  %li= link_to "ALT Insider", "http://altinsider.com"
+  %li= link_to "Reddit /r/teachinginjapan", "http://reddit.com/r/teachinginjapan"
