--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,4 +1,4 @@
-%footer.container-fluid.p-4.mt-4.bg-secondary
+%footer.container-fluid.p-4.mt-4
   .row
     .col-md-4
       %h5.text-light ALTopedia
