--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -19,6 +19,7 @@
 %ul
   %li= link_to "TEFLtastic", "https://tefltastic.wordpress.com"
   %li= link_to "Akita JET teaching resources", "http://akitajet.com/wiki/Teaching_resources"
+  %li= link_to "Kobe JET", "https://www.kobejet.com"
   %li= link_to "ALT Wiki", "https://www.altwiki.net"
   %li= link_to "Breaking News English", "https://breakingnewsenglish.com"
 
