Pull more site text into localized files

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -4,10 +4,10 @@
       %h5.text-light ALTopedia
       %ul.list-unstyled.text-small
         %li= link_to t('layouts.about'), about_path, class: "text-light"
-        %li= link_to "Contact", contact_path, class: "text-light"
-        %li= link_to "Acknowledgements", thanks_path, class: "text-light"
+        %li= link_to t('layouts.contact'), contact_path, class: "text-light"
+        %li= link_to t('layouts.acknowledgements'), thanks_path, class: "text-light"
     .col-md-4
-      %h5.text-light Elsewhere
+      %h5.text-light= t('layouts.external-links')
       %ul.list-unstyled.text-small
-        %li= link_to "ALT Training Online", altto_path, class: "text-light"
-        %li= link_to "Resources", resources_path, class: "text-light"
+        %li= link_to t('layouts.altto'), altto_path, class: "text-light"
+        %li= link_to t('layouts.resources'), resources_path, class: "text-light"
