Add another user account type that can post job listings

--- a/app/views/job_posts/index.html.haml
+++ b/app/views/job_posts/index.html.haml
@@ -1,6 +1,4 @@
-- provide(:title, "Job listings")
-
--# = render @job_posts
+- provide(:title, "ALTopedia - Job listings")
 
 - @job_posts.each do |job_post|
   .job-listing.box-shadow.p-4.my-3.rounded
