--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 %html
   %head
+    - if Rails.env.production?
+      = render "shared/analytics"
     %title= yield(:title)
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
