--- a/app/views/site_pages/es.html.haml
+++ b/app/views/site_pages/es.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, t('.title'))
 
-%h2= t('.es-heading')
+%h2.text-center= t('.es-heading')
 
-=render "activities/school_level_activity_list", textbook_level: Textbook.ES
+=render "activities/school_level_activity_list"
 
 
