--- a/app/views/site_pages/jhs.html.haml
+++ b/app/views/site_pages/jhs.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, t('.title'))
 
-%h2= t('.jhs-heading')
+%h2.text-center= t('.jhs-heading')
 
-=render "activities/school_level_activity_list", textbook_level: Textbook.JHS
+=render "activities/school_level_activity_list"
 
