--- a/app/views/site_pages/hs.html.haml
+++ b/app/views/site_pages/hs.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, t('.title'))
 
-%h2= t('.hs-heading')
+%h2.text-center= t('.hs-heading')
 
-=render "activities/school_level_activity_list", textbook_level: Textbook.HS
+=render "activities/school_level_activity_list"
 
