--- a/app/views/comments/_comment_list.html.haml
+++ b/app/views/comments/_comment_list.html.haml
@@ -1,7 +1,7 @@
 .comment-list.mb-4
   %h5= t('.comment_heading')
   - comments.each do |comment|
-    .card.mb-2
+    .card.mb-2{"id" => comment.id}
       .card-body.p-2.box-shadow
         %small= link_to comment.user.username, comment.user, class: "border-bottom"
         %small.float-right= l(comment.created_at, format: :quite_short)
@@ -12,9 +12,9 @@
         - if user_signed_in?
           .btn-group{"role" => "group", "aria-label" => "Comment controls"}
             - if policy(comment).solve?
-              = link_to t('.solve-link'), solve_comment_path(comment), method: :put, class: "btn btn-outline-secondary btn-sm"
+              = link_to t('.solve-link'), solve_comment_path(comment), method: :put, class: "btn btn-outline-secondary btn-sm", remote: true
             - if policy(comment).unapprove?
-              = link_to t('.hide-link'), unapprove_comment_path(comment), method: :put, class: "btn btn-outline-secondary btn-sm"
+              = link_to t('.hide-link'), unapprove_comment_path(comment), method: :put, class: "btn btn-outline-secondary btn-sm", remote: true
             - if policy(comment).delete?
-              = link_to t('.delete-link'), comment, method: :delete, data: { confirm: t('.delete-confirmation') }, class: "btn btn-outline-secondary btn-sm"
+              = link_to t('.delete-link'), comment, method: :delete, data: { confirm: t('.delete-confirmation') }, class: "btn btn-outline-secondary btn-sm", remote: true
 = paginate comments
