--- a/app/views/site_pages/warmups.html.haml
+++ b/app/views/site_pages/warmups.html.haml
@@ -1,15 +1,34 @@
 - provide(:title, t('.title'))
 
-%h2= t('.warmups-heading')
+%h2.text-center= t('.warmups-heading')
 
-- @activities.each do |activity|
-  .card
-    .card-body
-      %span.font-weight-bold= link_to activity.name, activity
-      %span.font-weight-normal= activity.short_description
-      - activity.tags.each do |tag|
-        = link_to tag.long_name, tag, class: "badge badge-success"
-      %span.badge.badge-info.float-right= activity.upvote_count
-%br
-= paginate @activities
+.row
+  .col-md-6.col-sm-10.col-lg-6.mt-2
+    .card
+      .card-header.text-center= t('.top10-es')
+      %ul.list-group.list-group-flush
+        - @top10_es.each do |activity|
+          %li.list-group-item
+            %span= link_to activity.name, activity, class: "card-link"
+            %small= activity.short_description
+
+  .col-md-6.col-sm-10.col-lg-6.mt-2
+    .card
+      .card-header.text-center= t('.top10-jhs')
+      %ul.list-group.list-group-flush
+        - @top10_jhs.each do |activity|
+          %li.list-group-item
+            %span= link_to activity.name, activity, class: "card-link"
+            %small= activity.short_description
+
+%h5.mt-2 Newest Warm-ups
+
+.card-columns.mt-2
+  - @all_warmups.each do |activity|
+    .card
+      .card-body
+        %h5.card-title= link_to activity.name, activity
+        %p= activity.short_description
+
+= paginate @all_warmups
 
