--- a/app/views/taggings/_form.html.haml
+++ b/app/views/taggings/_form.html.haml
@@ -3,5 +3,5 @@
     = form_for(@tagging, remote: true) do |f|
       %small= t('.add-tagging')
       = f.collection_select :tag_id, Tag.all, :id, :long_name, {}, class: 'form-control'
-      = hidden_field_tag :activity_id, @activity.id
+      = f.hidden_field :activity_id, value: @activity.id
       = f.submit t('.add-tag-button'), class: "btn btn-primary"
