--- a/app/views/taggings/create.js.erb
+++ b/app/views/taggings/create.js.erb
@@ -1,1 +1,1 @@
-$('#activity-' + '<%= @tagging.activity.id %>' + '-tags').append("<span class=\"badge badge-pill badge-primary\"><%= @tagging.tag.long_name %></span>");
+$('#activity-' + '<%= @tagging.activity_id %>' + '-tags').append("<span class=\"badge badge-pill badge-primary\"><%= @tagging.tag.long_name %></span>");
