--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,7 @@
                           "aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle Navigation" }
     %span.navbar-toggler-icon
   .collapse.navbar-collapse#navbarSupportedContent
-    %ul.navbar-nav.mr-auto
+    %ul.navbar-nav
       - if user_signed_in?
         %li.nav-item.active
           = link_to  current_user.username, current_user, class: "nav-link"
@@ -14,19 +14,18 @@
           %li.nav-item.active= link_to "Mod queue", modqueue_path, class: "nav-link"
         - elsif current_user.job_poster?
           %li.nav-item.active= link_to "Post new job listing", new_job_post_path, class: "nav-link"
-        %li.nav-item.active
-          = link_to t('layouts.log_out'), destroy_user_session_path, method: :delete, class: "nav-link"
       - else
         %li.nav-item.active
           = link_to t('layouts.log_in'), new_user_session_path, class: "nav-link"
       %li.nav-item.active
-        = link_to t('layouts.new_activity'), new_activity_path, class: "nav-link"
-      %li.nav-item.active
-        = link_to t('layouts.contributors'), users_path, class: "nav-link"
+        = link_to t('layouts.new-activity'), new_activity_path, class: "nav-link"
       %li.nav-item.active
         = link_to t('layouts.job-listings'), jobs_path, class: "nav-link"
       %li.nav-item.active
         = link_to "ALTTO", altto_path, class: "nav-link"
+      - if user_signed_in?
+        %li.nav-item.active
+          = link_to t('layouts.log_out'), destroy_user_session_path, method: :delete, class: "nav-link"
       - if I18n.locale == :ja
         %li.nav-item= link_to "English", "https://en.altopedia.org", class: "nav-link"
       - elsif I18n.locale == :en
